# advent-of-code-2025

./: Cargo.toml  README.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
src/utils/: dirs.rs  grid.rs  macros.rs  mod.rs  point.rs
